k8s/base/infra/istio/v1.25.0/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio.io/rev: 1-25-0
